work but has too many bugs...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ project(kumo_viewer)
 cmake_minimum_required(VERSION 3.16)
 
 
+set (CMAKE_CXX_STANDARD 11)
+
 #ZLIB
 find_package(ZLIB REQUIRED)
 add_definitions(-DNANOVDB_USE_ZIP)
@@ -10,6 +12,10 @@ add_definitions(-DNANOVDB_USE_ZIP)
 find_package(CUDA REQUIRED)
 if(CUDA_FOUND)
     message("Cuda Version: " ${CUDA_VERSION})
+    set ( CMAKE_CUDA_STANDARD 11 )
+	set ( CMAKE_CUDA_STANDARD_REQUIRED ON )
+    set ( CMAKE_CUDA_FLAGS "--extended-lambda")
+    enable_language(CUDA)
     enable_language(CUDA)
 endif()
 
@@ -24,15 +30,15 @@ include_directories(${ZLIB_INCLUDE_DIR})
 
 
 #Our Sources and Headers
-file(GLOB CPP_SOURCES LIST_DIRECTORIES false 
-    ${CMAKE_SOURCE_DIR}/src/*.cpp)
-message(STATUS ${CPP_SOURCES})
-file(GLOB CU_SOURCES LIST_DIRECTORIES false
-    ${CMAKE_SOURCE_DIR}/src/*.cu)
-message(STATUS ${CU_SOURCES})
+# file(GLOB CPP_SOURCES LIST_DIRECTORIES false 
+#     ${CMAKE_SOURCE_DIR}/src/*.cpp)
+# message(STATUS ${CPP_SOURCES})
+# file(GLOB CU_SOURCES LIST_DIRECTORIES false
+#     ${CMAKE_SOURCE_DIR}/src/*.cu)
+# message(STATUS ${CU_SOURCES})
 
-add_library(core STATIC ${CPP_SOURCES} ${CU_SOURCES})
+# add_library(core STATIC ${CPP_SOURCES} ${CU_SOURCES})
 
 #Main
-add_executable(kumo main.cpp)
-target_link_libraries(kumo PRIVATE ZLIB::ZLIB core)
+add_executable(kumo render.cu)
+target_link_libraries(kumo PRIVATE ZLIB::ZLIB)
